Improve Exchange queues and permissions

--- a/stacks/apps-200A.yml
+++ b/stacks/apps-200A.yml
@@ -235,6 +235,7 @@ Resources:
         SharedMemcachedEndpointPort: !Ref SharedMemcachedEndpointPort
         SharedAuroraMysqlEndpoint: !Ref SharedAuroraMysqlEndpoint
         SharedAuroraMysqlPort: !Ref SharedAuroraMysqlPort
+        EchoServiceToken: !Ref EchoServiceToken
         AnnounceResourcePrefix: !Ref AnnounceResourcePrefix
         PorterJobExecutionSnsTopicArn: !Ref PorterJobExecutionSnsTopicArn
         MediajointS3BucketArn: !Ref MediajointS3BucketArn
