--- a/stacks/shared-announce.yml
+++ b/stacks/shared-announce.yml
@@ -798,7 +798,7 @@ Resources:
     Properties:
       DelaySeconds: 0
       MessageRetentionPeriod: 345600 # 4 days
-      QueueName: !Sub ${Hash.Hash}_${EnvironmentTypeAbbreviation}EmailNetwork
+      QueueName: !Sub ${Hash.Hash}_${EnvironmentTypeAbbreviation}_exchange_EmailNetwork
       ReceiveMessageWaitTimeSeconds: 0
       Tags:
         - { Key: prx:meta:tagging-version, Value: "2021-04-07" }
