Add missing envars to task def

--- a/stacks/apps/remix.yml
+++ b/stacks/apps/remix.yml
@@ -376,6 +376,29 @@ Resources:
               Value: !Ref SharedAuroraPostgresqlPort
             - Name: PORTER_SNS_TOPIC
               Value: !Ref PorterJobExecutionSnsTopicArn
+            # TODO Below, remove from Secrets
+            - Name: PORTER_SNS_TOPIC
+              Value: !Ref PorterJobExecutionSnsTopicArn
+            - Name: DATABASE_POOL_SIZE
+              Value: "5"
+            - Name: LANG
+              Value: en_US.UTF-8
+            - Name: NEW_RELIC_LICENSE_KEY
+              Value: !Ref NewRelicApiKeyPrxLite
+            - Name: NEW_RELIC_LOG
+              Value: stdout
+            - Name: PRX_HOST
+              Value: !Ref ExchangeHostname
+            - Name: PRX_PORT
+              Value: "443"
+            - Name: PRX_SCHEME
+              Value: https
+            - Name: AWS_REGION
+              Value: !Ref AWS::Region
+            - Name: AWS_S3_BUCKET
+              Value: !Ref RemixS3BucketArn
+            - Name: REMIX_HOST
+              Value: !Ref RemixHostname
           Essential: true
           Image: !Ref EcrImageTag
           LogConfiguration:
