--- a/dns/publicfeeds.net-hosted_zone.yml
+++ b/dns/publicfeeds.net-hosted_zone.yml
@@ -213,3 +213,7 @@ Resources:
         # This Is Dating
         - { Type: A, Name: !Sub "pf3663tidp.${Domain}", AliasTarget: { DNSName: "d1ozaymewcttrv.cloudfront.net.", HostedZoneId: Z2FDTNDATAQYW2 } }
         - { Type: AAAA, Name: !Sub "pf3663tidp.${Domain}", AliasTarget: { DNSName: "d1ozaymewcttrv.cloudfront.net.", HostedZoneId: Z2FDTNDATAQYW2 } }
+
+        # Skeptoid
+        - { Type: A, Name: !Sub "pf3294skpd.${Domain}", AliasTarget: { DNSName: "dvvqc6a2clh7p.cloudfront.net.", HostedZoneId: Z2FDTNDATAQYW2 } }
+        - { Type: AAAA, Name: !Sub "pf3294skpd.${Domain}", AliasTarget: { DNSName: "dvvqc6a2clh7p.cloudfront.net.", HostedZoneId: Z2FDTNDATAQYW2 } }
