Enable Docker init for Publish

--- a/stacks/apps/publish.yml
+++ b/stacks/apps/publish.yml
@@ -247,6 +247,8 @@ Resources:
               Value: !If [IsProduction, prod, staging]
           Essential: true
           Image: !Ref EcrImageTag
+          LinuxParameters:
+            InitProcessEnabled: true
           LogConfiguration:
             LogDriver: awslogs
             Options:
