Enable Docker init for Play

--- a/stacks/apps/play.yml
+++ b/stacks/apps/play.yml
@@ -239,6 +239,8 @@ Resources:
               Value: prx
           Essential: true
           Image: !Ref EcrImageTag
+          LinuxParameters:
+            InitProcessEnabled: true
           LogConfiguration:
             LogDriver: awslogs
             Options:
