Use correct Remix bucket for the worker too

--- a/stacks/apps/remix.yml
+++ b/stacks/apps/remix.yml
@@ -393,7 +393,7 @@ Resources:
             - Name: AWS_REGION
               Value: !Ref AWS::Region
             - Name: AWS_S3_BUCKET
-              Value: !Ref RemixS3BucketArn
+              Value: !Select [5, !Split [":", !Ref RemixS3BucketArn]]
             - Name: REMIX_HOST
               Value: !Ref RemixHostname
           Essential: true
