Add TTBoOK feed CDN DNS records

--- a/dns/publicfeeds.net-hosted_zone.yml
+++ b/dns/publicfeeds.net-hosted_zone.yml
@@ -217,3 +217,7 @@ Resources:
         # Skeptoid
         - { Type: A, Name: !Sub "pf3294skpd.${Domain}", AliasTarget: { DNSName: "dvvqc6a2clh7p.cloudfront.net.", HostedZoneId: Z2FDTNDATAQYW2 } }
         - { Type: AAAA, Name: !Sub "pf3294skpd.${Domain}", AliasTarget: { DNSName: "dvvqc6a2clh7p.cloudfront.net.", HostedZoneId: Z2FDTNDATAQYW2 } }
+
+        # TTBoOK
+        - { Type: A, Name: !Sub "pf9172ttbk.${Domain}", AliasTarget: { DNSName: "d2477qmman2mwe.cloudfront.net.", HostedZoneId: Z2FDTNDATAQYW2 } }
+        - { Type: AAAA, Name: !Sub "pf9172ttbk.${Domain}", AliasTarget: { DNSName: "d2477qmman2mwe.cloudfront.net.", HostedZoneId: Z2FDTNDATAQYW2 } }
