Update new Exchange task counts

--- a/stacks/apps/exchange.yml
+++ b/stacks/apps/exchange.yml
@@ -333,7 +333,7 @@ Resources:
       DeploymentConfiguration:
         MaximumPercent: 200
         MinimumHealthyPercent: 50
-      DesiredCount: 2 # !If [IsProduction, 5, 2]
+      DesiredCount: !If [IsProduction, 5, 2]
       EnableECSManagedTags: true
       LoadBalancers:
         - ContainerName: !Ref kWebContainerName
@@ -477,14 +477,13 @@ Resources:
 
   WorkerEcsService:
     Type: AWS::ECS::Service
-    # Condition: EnableWorkers # See README
-    Condition: IsStaging
+    Condition: EnableWorkers # See README
     Properties:
       Cluster: !Ref EcsClusterArn
       DeploymentConfiguration:
         MaximumPercent: 200
         MinimumHealthyPercent: 50
-      DesiredCount: 1 # !If [IsProduction, 6, 0] # TODO
+      DesiredCount: !If [IsProduction, 6, 1]
       EnableECSManagedTags: true
       PropagateTags: TASK_DEFINITION
       Tags:
