--- a/cd/cd.yml
+++ b/cd/cd.yml
@@ -1117,6 +1117,7 @@ Resources:
                   - autoscaling:*
                   - cloudfront:*
                   - cloudwatch:*
+                  - dynamodb:*
                   - ec2:*
                   - ecs:*
                   - elasticache:*
