--- a/stacks/apps-300A.yml
+++ b/stacks/apps-300A.yml
@@ -53,6 +53,7 @@ Parameters:
   DovetailRouterHostname: { Type: String }
   SharedGlueDatabaseName: { Type: String }
   AdFilesS3BucketArn: { Type: String }
+  FeedsS3BucketArn: { Type: String }
 
   AuguryEcrImageTag: { Type: String }
   AugurySecretsVersion: { Type: String }
@@ -188,6 +189,7 @@ Resources:
         SharedRedisReplicationGroupEndpointAddress: !Ref SharedRedisReplicationGroupEndpointAddress
         SharedRedisReplicationGroupEndpointPort: !Ref SharedRedisReplicationGroupEndpointPort
         SharedGlueDatabaseName: !Ref SharedGlueDatabaseName
+        FeedsS3BucketArn: !Ref FeedsS3BucketArn
         AuguryHostname: !Ref AuguryHostname
         FeederHostname: !Ref FeederHostname
         DovetailCdnHostname: !Ref DovetailCdnHostname
