--- a/stacks/root.yml
+++ b/stacks/root.yml
@@ -989,6 +989,7 @@ Resources:
         DovetailRouterHostname: !GetAtt Constants.DovetailRouterHostname
         SharedGlueDatabaseName: !GetAtt SharedGlueDatabaseStack.Outputs.SharedGlueDatabaseName
         AdFilesS3BucketArn: !Ref AdFilesS3BucketArn
+        FeedsS3BucketArn: !Ref FeedsS3BucketArn
 
         # App-specific parameters
 
