--- a/devops/porter-cd-pipeline.yml
+++ b/devops/porter-cd-pipeline.yml
@@ -99,7 +99,7 @@ Resources:
       Description: Builds and packages Porter via SAM for future deployment
       Environment:
         ComputeType: BUILD_GENERAL1_SMALL
-        Image: aws/codebuild/amazonlinux2-x86_64-standard:3.0
+        Image: aws/codebuild/standard:5.0
         Type: LINUX_CONTAINER
       LogsConfig:
         CloudWatchLogs:
