--- a/stacks/apps/dovetail-router.yml
+++ b/stacks/apps/dovetail-router.yml
@@ -893,6 +893,8 @@ Resources:
                     - 815/feed-rss.xml
                     - 284/feed-rss.xml
                     - 70/feed-rss.xml
+                    - 18/feed-rss.xml
+                    - 24/feed-rss.xml
               detail-type:
                 - Object Created
               source:
@@ -911,6 +913,8 @@ Resources:
           '815/feed-rss.xml': 4,
           '284/feed-rss.xml': 9,
           '70/feed-rss.xml': 20,
+          '18/feed-rss.xml': 16,
+          '24/feed-rss.xml': 16,
         };
 
         exports.handler = async (event) => {
