Allow passing in instance types

--- a/stacks/shared-memcached.yml
+++ b/stacks/shared-memcached.yml
@@ -29,6 +29,12 @@ Parameters:
     Type: String
   CloudWatchAlarmTaggerServiceToken:
     Type: String
+  StagingInstanceType:
+    Type: String
+    Default: cache.t3.micro
+  ProductionInstanceType:
+    Type: String
+    Default: cache.t3.micro
 
 Conditions:
   IsProduction: !Equals [!Ref EnvironmentType, Production]
@@ -81,8 +87,8 @@ Resources:
       Engine: memcached
       CacheNodeType: !If
         - IsProduction
-        - cache.t3.micro
-        - cache.t3.micro
+        - !Ref ProductionInstanceType
+        - !Ref StagingInstanceType
       NumCacheNodes: !If
         - IsProduction
         - 2
