--- a/stacks/root.yml
+++ b/stacks/root.yml
@@ -305,8 +305,8 @@ Resources:
         ECSServiceAutoscaleIAMRoleArn: !GetAtt ECSClusterStack.Outputs.ECSServiceAutoscaleIAMRoleArn
         ECSServiceIAMRole: !GetAtt ECSClusterStack.Outputs.ECSServiceIAMRole
         EcrRegion: !Ref EcrRegion
-        SharedMemcachedEndpointAddress: !GetAtt SharedMemcachedStack.Outputs.CacheEndpointAddress
-        SharedMemcachedEndpointPort: !GetAtt SharedMemcachedStack.Outputs.CacheEndpointPort
+        SharedMemcachedEndpointAddress: !GetAtt SharedMemcachedStack2.Outputs.CacheEndpointAddress
+        SharedMemcachedEndpointPort: !GetAtt SharedMemcachedStack2.Outputs.CacheEndpointPort
         AmazonSesSmtpCredentialsGeneratorServiceToken: !GetAtt CustomResourcesStack.Outputs.AmazonSesSmtpCredentialsGeneratorServiceToken
         UploadSigningEndpointUrl: !GetAtt ServerlessRootStack.Outputs.UploadSigningEndpointUrl
         UploadSigningAccessKeyId: !GetAtt ServerlessRootStack.Outputs.UploadSigningAccessKeyId
@@ -468,6 +468,7 @@ Resources:
           Value: !Ref AWS::StackId
       TemplateURL: !Join ["", ["https://", "Fn::ImportValue": !Sub "${InfrastructureStorageStackName}-InfrastructureSourceBucket", !Sub ".s3.${AWS::Region}.amazonaws.com/${InfrastructureGitCommit}", "/stacks/dovetail-stitch-lambda.yml"]]
       TimeoutInMinutes: 5
+  # TODO: delete
   SharedMemcachedStack:
     Type: AWS::CloudFormation::Stack
     Condition: IsProduction
@@ -678,6 +679,7 @@ Resources:
       TemplateURL: !Sub ${Constants.TemplateUrlBase}/stacks/shared-resource-share.yml
       TimeoutInMinutes: 20
 
+  # TODO: delete
   PrivateSharedMemcachedStack:
     Type: AWS::CloudFormation::Stack
     Properties:
@@ -814,7 +816,7 @@ Resources:
         VpcPrivateSubnet3Id: !GetAtt SharedVpcStack.Outputs.PrivateSubnet3Id
         KinesisStreamsEndpointAccessSecurityGroupId: !GetAtt SharedVpcStack.Outputs.KinesisStreamsEndpointAccessSecurityGroupId
         StsEndpointAccessSecurityGroupId: !GetAtt SharedVpcStack.Outputs.StsEndpointAccessSecurityGroupId
-        SharedMemcachedEndpointAddress: !GetAtt PrivateSharedMemcachedStack.Outputs.CacheEndpointAddress
+        SharedMemcachedEndpointAddress: !GetAtt PrivateSharedMemcachedStack2.Outputs.CacheEndpointAddress
         SharedRedisReplicationGroupEndpointAddress: !GetAtt SharedRedisStack.Outputs.ReplicationGroupEndpointAddress
         SharedRedisReplicationGroupEndpointPort: !GetAtt SharedRedisStack.Outputs.ReplicationGroupEndpointPort
         AmazonSesSmtpCredentialsGeneratorServiceToken: !GetAtt CustomResourcesStack.Outputs.AmazonSesSmtpCredentialsGeneratorServiceToken
@@ -912,8 +914,8 @@ Resources:
         VpcPrivateSubnet1Id: !GetAtt SharedVpcStack.Outputs.PrivateSubnet1Id
         VpcPrivateSubnet2Id: !GetAtt SharedVpcStack.Outputs.PrivateSubnet2Id
         VpcPrivateSubnet3Id: !GetAtt SharedVpcStack.Outputs.PrivateSubnet3Id
-        SharedMemcachedEndpointAddress: !GetAtt PrivateSharedMemcachedStack.Outputs.CacheEndpointAddress
-        SharedMemcachedEndpointPort: !GetAtt PrivateSharedMemcachedStack.Outputs.CacheEndpointPort
+        SharedMemcachedEndpointAddress: !GetAtt PrivateSharedMemcachedStack2.Outputs.CacheEndpointAddress
+        SharedMemcachedEndpointPort: !GetAtt PrivateSharedMemcachedStack2.Outputs.CacheEndpointPort
         SharedRedisReplicationGroupEndpointAddress: !GetAtt SharedRedisStack.Outputs.ReplicationGroupEndpointAddress
         SharedRedisReplicationGroupEndpointPort: !GetAtt SharedRedisStack.Outputs.ReplicationGroupEndpointPort
         AmazonSesSmtpCredentialsGeneratorServiceToken: !GetAtt CustomResourcesStack.Outputs.AmazonSesSmtpCredentialsGeneratorServiceToken
@@ -1150,7 +1152,7 @@ Resources:
         SharedAlbFullName: !GetAtt SharedAlbStack.Outputs.AlbFullName
         SharedAlbVanityDomain: !GetAtt SharedAlbStack.Outputs.VanityAlbDomain
 
-        SharedMemcachedCacheName: !GetAtt PrivateSharedMemcachedStack.Outputs.CacheName
+        SharedMemcachedCacheName: !GetAtt PrivateSharedMemcachedStack2.Outputs.CacheName
         SharedRedisReplicationGroupName: !GetAtt SharedRedisStack.Outputs.ReplicationGroupName
 
         StackResourceGroupName: !GetAtt ResourceGroupsStack.Outputs.StackResourceGroupName
